# tellar

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
assets/: tellar.service
assets/guild/: tellar.yml.example
assets/guild/agents/: AGENTS.md  GUARDIAN.md
assets/guild/brain/: KNOWLEDGE.md
assets/guild/skills/draw/: SKILL.md
guild/: tellar.yml.example
guild/agents/: GUARDIAN.md
guild/scripts/: tellar.service
guild/skills/draw/tools/: draw.py
schemas/: skill.schema.json
scripts/: manage.sh  tellar.service
src/: agent_loop.rs  config.rs  context.rs  conversation_context.rs  conversation_policy.rs  delivery.rs  discord.rs  execution_contract.rs  guardian.rs  init.rs  input.rs  lib.rs  llm.rs  main.rs  plan_executor.rs  prompt_context.rs  rhythm.rs  router.rs  routing_catalog.rs  session.rs  skills.rs  steward.rs  task_policy.rs  task_response.rs  thread_doc.rs  thread_runtime.rs  thread_store.rs  tools.rs  watch.rs
src/discord/: client.rs  ingest_store.rs  mod.rs
src/thread/: doc.rs  mod.rs  store.rs
tests/: llm_integration.rs
